# ChangeLog for net-wireless/dwscan
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Apr 2011; Justin Lecher <jlec@gentoo.org> dwscan-0.2.ebuild:
  Fix for python ABI stuff
