@@ -1,1 +1,1 @@
-DIST dwscan-0.2.tar.bz2 12004 SHA256 84d2161d1b9714d4517cef811a35fe53fdddfd5b22a2693811ccae02ed1ef779
+DIST dwscan-0.2.tar.bz2 12004 SHA256 84d2161d1b9714d4517cef811a35fe53fdddfd5b22a2693811ccae02ed1ef779 SHA512 a027564911c2c38d7f4982ec2e433557a6ad7b061cf778880b97282afba7c0a5dcbf4730d2f6202f5f2f5e4865c3a6f81774a980a2827704619021cf46826b99 WHIRLPOOL 912412ee942848477a3142f835db3f5b1b819b8a148da9dc977a81108299431f41025cb6a4ff855fd95f1476e9261173928b9552b9694d975ede19cef3ebeb75
