@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/dwscan
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Jun 2013; Justin Lecher <jlec@gentoo.org> dwscan-0.2.ebuild, metadata.xml:
+  Bump to EAPI=5 and new python r1 eclasses
 
   13 Apr 2011; Justin Lecher <jlec@gentoo.org> dwscan-0.2.ebuild:
   Fix for python ABI stuff
